--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 	},
 	"dependencies": {
 		"@heroicons/react": "^2.2.0",
+		"@toolwind/corner-shape": "0.0.8-3",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"motion": "^12.24.10",
