--- a/package.json
+++ b/package.json
@@ -53,8 +53,8 @@
     "@toolwind/corner-shape": "0.0.8-3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
     "lucide-react": "^0.562.0",
+    "moment": "^2.30.1",
     "motion": "^12.24.10",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
