--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "version": "node version-bump.mjs && git add manifest.json versions.json",
     "docs:serve": "storybook dev -p 6006",
     "docs:build": "npm run build-storybook",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "generate-story-order": "node scripts/generate-story-order.mjs",
+    "videos:render": "npm run generate-story-order && npx remotion render src/remotion/index.ts \"$COMPOSITION\" build/remotion/$COMPOSITION.mp4"
   },
   "keywords": [],
   "author": "",
@@ -22,7 +24,8 @@
     "@biomejs/biome": "2.3.11",
     "@chromatic-com/storybook": "^4.1.3",
     "@remotion/cli": "4.0.406",
-    "@remotion/player": "^4.0.406",
+    "@remotion/player": "4.0.406",
+    "@remotion/tailwind-v4": "4.0.406",
     "@storybook/addon-a11y": "^10.1.11",
     "@storybook/addon-docs": "^10.1.11",
     "@storybook/addon-themes": "^10.1.11",
