fix mocks on testing env

--- a/chromatic.config.json
+++ b/chromatic.config.json
@@ -1,5 +1,6 @@
 {
   "onlyChanged": true,
   "projectId": "Project:6965beca09372c13a6a8327c",
-  "zip": true
+  "zip": true,
+  "exitOnceUploaded": true
 }
